fixed hamburger and nav widths on mobile

--- a/_src/_includes/sass/components/_hamburger.scss
+++ b/_src/_includes/sass/components/_hamburger.scss
@@ -61,7 +61,7 @@
     }
 }
 
-@include mq(md) {
+@media (width > 974px) {
     .hamburger {
         display: none;
     }
